add start button remove console no interact play() error

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body>
     <div class="main">
         <div class="round"></div>
+        <button class="start">START</button>
         <div class="game">
-            <div class="blue"><audio src="./sounds/blue.mp3" id="s_blue"></audio></div>
-            <div class="yellow"><audio src="./sounds/yellow.mp3" id="s_yellow"></audio></div>
-            <div class="green"><audio src="./sounds/green.mp3" id="s_green"></audio></div>
-            <div class="red"><audio src="./sounds/red.mp3" id="s_red"></audio></div>
+            <div class="blue"><audio src="./sounds/blue.mp3" allow="autoplay" id="s_blue"></audio></div>
+            <div class="yellow"><audio src="./sounds/yellow.mp3" allow="autoplay" id="s_yellow"></audio></div>
+            <div class="green"><audio src="./sounds/green.mp3" allow="autoplay"id="s_green"></audio></div>
+            <div class="red"><audio src="./sounds/red.mp3" allow="autoplay" id="s_red"></audio></div>
         </div>
         <div class="score">Best Score: 0</div>
     </div>
